[package]
name = "gh-repo-dump"
version = "0.1.0"
edition = "2021"
description = "Extract comprehensive GitHub repository details as JSON"
license = "MIT"
repository = "https://github.com/ayang/gh-repo-dump"

[[bin]]
name = "gh-repo-dump"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
